New two stage start is working
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,12 @@ Welcome to LinkCheck</h1>
 </div>
 
 
-<form action="resultsnew" method ="POST">
+<form action="indexn" method ="POST">
 <div style="padding-left:5em;padding-top:2em;" >
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
-<input type="text" size="55" name="name"><br>
+<input type="text" size="25" name="name"><br>
 </div><div style="padding-left:15em;  padding-top:10px;padding-bottom:6px;">
 <input type="submit" value="Submit" style="min-width:19em">
 
