--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -40,12 +40,12 @@ function cdf(){
 <script>
 
 $(document).ready(function(){
-    $doit();
+    doit();
 });
 
 $.mjs = function(df) {
     var df = '{{ name }}';
-        $( "#content" ).load(df );
+    $( "#content" ).load(df );
 };
 
 function display() {
@@ -59,14 +59,7 @@ $.mjs();
 
 <body>
 
-
-
-
-
-
 <div id="content" style="padding-top:2em; padding-bottom:2em"></div>
-
-
 
 
 </body>
