Works ok for production - minor changes.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -7,7 +7,9 @@
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+<meta http-equiv="Cache-Control" content="no-cache" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
 <title>LinkCheck Step Two</title>
 
 </head>
@@ -40,5 +42,9 @@ Keep this window in front.</div>
 <div style="padding-bottom:2em"></div>
 
 </body>
-
+<head>
+<meta http-equiv="Cache-Control" content="no-cache" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+</head>
 </html>
