--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <html lang="en-US">
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
-
+<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" />
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="Cache-Control" content="no-cache" />
