Looks better with new button
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 <h1 style="text-align:center; padding-top:1em;">
 Welcome to LinkCheck</h1>
 
-<div style="text-align:center; font-style:bold; color: #377ba8;">
+<div style="text-align:center; font-size: 14pt; font-style:bold; color: #377ba8;">
     This app is not meant for large websites.  <br>
     The larger the website the longer it takes.<br> &emsp;<br>
 </div>
@@ -34,9 +34,12 @@ Welcome to LinkCheck</h1>
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
-<input type="text" size="25" name="name"><br>
-</div><div style="padding-left:15em;  padding-top:10px;padding-bottom:6px;">
-<input type="submit" value="Submit" style="min-width:19em">
+<input type="text" size="55" name="name"><br>
+</div><div style="padding-left:25em;  padding-top:10px;padding-bottom:6px;">
+
+<input type="submit" value="Submit" style="min-width:15em; background-color:#48B8C6;
+       color: white; padding: 9px 24px; font-size: 16px;
+        font-style: strong; border-radius:12px;">
 
     </div>
 </form>
