--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -51,11 +51,11 @@ h3 {
 
 
 </head>
-<body style="padding-left:5em;">
+<body style="padding-left: 5em;">
 
-<div style="padding-top:3em;padding-left:5em;padding-bottom:2em;">
+<div style="padding-top: 3em;padding-left: 5em;padding-bottom: 2em;">
 
-<h3>
+<h3 style=display:none>
       You must keep this window open <br>
     and in front in order for the program to complete.
  </h3>
@@ -66,21 +66,28 @@ h3 {
 You entered:  "{{ name }}"   </h3>
 </div>
 <script>
-    mv() {
-    <div id="div1" style="display: block;">
-    document.getElementById("div1").innerHTML = "div1";
+  function chg() {
+    document.getElementById("div1").style.display = "block";
+    document.getElementById("mb").hidden = true;
+    document.getElementById("div2").style.display = "block";
+    document.getElementById("d3").style.display = "block";
+    document.getElementById("d4").style.display = "block";
     }
 </script>
-<div id="div1" class="loader" style="margin-left:10em; display: none;"></div>
+   <!--onsubmit="mybutton.hidden=true; -->
 
+<div id="div1" class="loader" style="margin-left: 20em; display: none;"></div>
+
+<div id="div2" style="margin-left: 15em; margin-top: 4em; display: none; font-style: strong, italic;">
+    Please wait while your links are checked...</div>
 
 
 <div style="padding-left:10em;padding-bottom:2em;">
 
 
-<form id="form" action="/indexnn" method ="POST" onsubmit="mybutton.hidden=true; return true;">
+<form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
   <input type="hidden" name="name" value="{{ name }}">
-  <input type="submit" name="mybutton" value="   Continue   " onclick="mv();"
+  <input type="submit" name="mb" id="mb" value="   Continue   "
          style="background-color: #48B8C6; color: white; padding: 12px 32px; font-size: 16px;
         font-style: strong;
             border-radius: 12px;">
@@ -90,10 +97,10 @@ You entered:  "{{ name }}"   </h3>
 
 </div>
 
-<div style="text-align:center; padding-top:1em; font-weight: bolder; font-size: 150%; color:red">
+<div id="d3" style="text-align:center; padding-top:1em; font-weight: bolder; font-size: 150%; color:red; display: none;">
 Please keep this window in front.</div>
 
-<div style="text-align:center; padding-top:2em; font-style:italic; font-size: 100%; color:red">
+<div id="d4" style="text-align:center; padding-top:2em; display: none; font-style:italic; font-size: 100%; color:red">
 Don't put this window behind other windows or minimize. </div>
 <div style="padding-bottom:2em"></div>
 
