--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -11,7 +11,14 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 
-
+<style>
+h4 {
+     color: #003399;
+     font-family:"Arial", "Helvetica Neue", Helvetica, sans-serif;
+     font-weight: 700;
+     padding-left: 4em;
+    }
+</style>
 
 
 
@@ -68,7 +75,10 @@ $.mjs();
 
 <body>
 
-<div id="content" style="padding-top:2em; padding-bottom:2em"><h4 style="padding-left:4em">Your results are almost ready.</h4></div>
+
+
+<div id="content" style="padding-top:2em; padding-bottom:2em; ">
+    <h4 style="font-style: italic;">Your results are almost ready . . . </h4></div>
 
 
 </body>
