--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
   color: #377ba8;
   margin: 1rem 0;
 }
