--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,16 @@ you want to LinkCheck here<br>
 </form>
 
 
+<div style="padding-left:12em; padding-top:2em; color:#377ba8;" >
+
+    If you're here just to see LinkCheck, <br>you can copy and paste one of these links:<br></div>
+<div  style="padding-left:20em; color:#4271A2">
+<h4>
+    schorrmedia.com/m.html<br>
+        astrology1234.com<br></h4>
+<br>
+</div>
+
 
 <div style="text-align:center; padding-top:1em; font-style:italic; font-size: 120%; color:purple">
 
