--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -25,9 +25,9 @@ h3 {
   margin-left:20em;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 50px;
-  height: 50px;
+  border-top: 16px solid #48B8C6;
+  width: 39px;
+  height: 39px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
 }
