--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -42,6 +42,7 @@ function cdf(){
     if (rel==true)
     {
         display(df);
+        log.console("df: " + df)
         clearInterval(nIntervId);
     }}
 
