--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -77,19 +77,16 @@ You entered:  "{{ name }}"   </h3>
     Please wait while your links are checked...</div>
 
 
-<div style="padding-left:10em;padding-bottom:2em;">
+<div style="padding-left: 10em; padding-bottom: 2em;">
 
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
   <input type="hidden" name="name" value="{{ name }}">
   <input type="submit" name="mb" id="mb" value="   Continue   "
          style="background-color: #48B8C6; color: white; padding: 12px 32px; font-size: 16px;
-        font-style: strong;
-            border-radius: 12px;">
+        font-style: strong; border-radius: 12px;">
 
 </form>
-
-
 </div>
 
 <div id="d3" style="text-align:center; padding-top:1em; font-weight: bolder; font-size: 150%; color:red; display: none;">
