--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -81,7 +81,7 @@ You entered:  "{{ name }}"   </h3>
 
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
-  <input type="hidden" name="name" value="{{ name }}">
+  <input type="hidden" name="name" value="e">
   <input type="submit" name="mb" id="mb" value="   Continue   "
          style="background-color: #48B8C6; color: white; padding: 12px 32px; font-size: 16px;
         font-style: strong; border-radius: 12px;">
