--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -45,21 +45,8 @@ h3 {
 </style>
 
 
-</head>
-<body style="padding-left: 5em;">
-
-<div style="padding-top: 3em;padding-left: 5em;padding-bottom: 2em;">
-
-<h3 style=display:none>
-      You must keep this window open <br>
-    and in front in order for the program to complete.
- </h3>
 
 
-    <br>
-<h3>
-You entered:  "{{ name }}"   </h3>
-</div>
 <script>
   function chg() {
     document.getElementById("div1").style.display = "block";
@@ -67,36 +54,137 @@ You entered:  "{{ name }}"   </h3>
     document.getElementById("div2").style.display = "block";
     document.getElementById("d3").style.display = "block";
     document.getElementById("d4").style.display = "block";
-    }
+    document.getElementById("testing").style.display = "block";
+    document.getElementsByClass("testing").style.display = "block";
+   }
 </script>
+
+
+
+
+<style type="text/css">
+
+.continueButton {
+    background-color: #48B8C6;
+    color: white;
+    padding: 12px 32px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 12px;
+}
+
+.testing {
+    margin-left: 15em;
+    margin-top: 4em;
+    display: none;
+    font-style: italic;
+    color: purple;
+}
+
+#bodd {
+    padding-left: 4em;
+}
+
+#topdiv {
+    padding-top: 3em;
+    padding-left: 5em;
+    padding-bottom: 2em;
+}
+#continb {
+    padding-left: 9em;
+    padding-bottom: 2em;
+}
+
+#hthree {
+    padding-left: 2em;
+   }
+
+.bot {
+    padding-bottom:2em;
+   }
+
+#d3 {
+    text-align:center;
+    padding-top:1em;
+    font-weight: bolder;
+    font-size: 150%;
+    color:red;
+    display: none;
+   }
+
+#d4 {
+    text-align:center;
+    padding-top:2em;
+    display: none;
+    font-style: italic;
+    font-size: 100%;
+    color:red;
+   }
+
+#div2 {
+    margin-left: 15em;
+    margin-top: 4em;
+    display: none;
+    font-size: 14px;
+    color: #377ba8;
+    font-style: italic;
+   }
+
+#div1 {
+    margin-left: 20em;
+    display: none;
+  }
+</style>
+
+
+
+
+
    <!--onsubmit="mybutton.hidden=true; -->
+</head>
+
+<!---- body starts --->
+<!---- using local styles because the hidden element doesn't toggle otherwise --->
+
+<body id=bodd>
+
+
+<div id="topdiv">
+
+<h3 style="display:none;">
+    You must keep this window open <br>
+    and in front in order for the program to complete.
+</h3>
+
+
+<br>
+<h3 id="hthree">
+You entered:  "{{ name }}"   </h3>
+</div>
+
 
 <div id="div1" class="loader" style="margin-left: 20em; display: none;"></div>
 
-<div id="div2" style="margin-left: 15em; margin-top: 4em; display: none; font-style: strong, italic;">
+<div id="div2">
     Please wait while your links are checked...</div>
 
-
-<div style="padding-left: 10em; padding-bottom: 2em;">
-
+<div id="continb">
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
-  <input type="hidden" name="name" value="e">
-  <input type="submit" name="mb" id="mb" value="   Continue   "
-         style="background-color: #48B8C6; color: white; padding: 12px 32px; font-size: 16px;
-        font-style: strong; border-radius: 12px;">
-
+  <input type="hidden" name="name" value="continue">
+  <input type="submit" id="mb" value="   Continue   " class="continueButton" >
 </form>
 </div>
 
-<div id="d3" style="text-align:center; padding-top:1em; font-weight: bolder; font-size: 150%; color:red; display: none;">
+<div id="d3">
 Please keep this window in front.</div>
 
-<div id="d4" style="text-align:center; padding-top:2em; display: none; font-style:italic; font-size: 100%; color:red">
+<div id="d4">
 Don't put this window behind other windows or minimize. </div>
-<div style="padding-bottom:2em"></div>
 
 
+
+<div class="bot"></div>
 
 </body>
 <head>
