Fixed some broken things.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ Welcome to LinkCheck</h1>
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
-<input type="text" size="55" name="name"><br>
+<input type="text" size="55" name="tsite"><br>
 </div><div style="padding-left:25em;  padding-top:10px;padding-bottom:6px;">
 
 <input type="submit" value="Submit" style="min-width:15em; background-color:#48B8C6;
