--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -54,8 +54,6 @@ h3 {
     document.getElementById("div2").style.display = "block";
     document.getElementById("d3").style.display = "block";
     document.getElementById("d4").style.display = "block";
-    document.getElementById("testing").style.display = "block";
-    document.getElementsByClass("testing").style.display = "block";
    }
 </script>
 
@@ -171,7 +169,7 @@ You entered:  "{{ name }}"   </h3>
 <div id="continb">
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
-  <input type="hidden" name="name" value="continue">
+  <!--<input type="hidden" name="name" value="continue">-->
   <input type="submit" id="mb" value="   Continue   " class="continueButton" >
 </form>
 </div>
