--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -77,11 +77,11 @@ $(function() {
 
 </div>
 <div style="padding-left:4em;padding-bottom:3em; font-family: Arial, Helvetica, sans-serif;">
-<h2 style="color:purple"><a href="jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
+<h2 style="color:purple"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
 
 <h3><a href="http://schorrmedia.com">Visit SchorrMedia.com</a>
 <span style="padding-left:2em"></span>
-<a href=https://github.com/nmschorr/linkcheck>See the code for this on Github</a></h3>
+<a href="https://github.com/nmschorr/linkcheck">See the code for this on Github</a></h3>
 
 
 </div>
