--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -16,10 +16,13 @@
 
 .bodstyle {
         margin-left:5em;
-        line-height:1.4;
+        line-height:1.5;
+        font-size:12px;
+
         }
 
 h4 {
+     font-size:15px;
      color: #003399;
      font-family:"Arial", "Helvetica Neue", Helvetica, sans-serif;
      font-weight: 700;
@@ -33,6 +36,7 @@ h4 {
         }
 
 .cstyle {
+     font-size:14px;
      padding-top:2em;
      padding-bottom:2em;
      margin-left:5em;
@@ -40,7 +44,8 @@ h4 {
 }
 
 h3 {
-    color:#36d1af;
+    color:#2FB595;
+    font-size:24px;
     }
 
 
@@ -76,12 +81,12 @@ $(function() {
 <div id="content"></div>
 
 </div>
-<div style="padding-left:4em;padding-bottom:3em; font-family: Arial, Helvetica, sans-serif;">
-<h2 style="color:purple"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
+<div style="padding-left:7em;padding-bottom:3em; font-family: Avant Garde, sans-serif;">
+<h2 style="color:blue;font-size:20px"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
 
-<h3><a href="http://schorrmedia.com">Visit SchorrMedia.com</a>
-<span style="padding-left:2em"></span>
-<a href="https://github.com/nmschorr/linkcheck">See the code for this on Github</a></h3>
+<h3><a  style="color:purple;"href="http://schorrmedia.com">Visit SchorrMedia.com</a>
+<span style="padding-left:7em"></span>
+<a href="https://github.com/nmschorr/linkcheck" style="color:#2FB595;">See this code on Github</a></h3>
 
 
 </div>
