Another big cleanup of duplicates.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -172,6 +172,10 @@ You entered:  "{{ name }}"   </h3>
   <!--<input type="hidden" name="name" value="continue">-->
   <input type="submit" id="mb" value="   Continue   " class="continueButton" >
 </form>
+
+<h2 style="color:blue;font-size:20px;padding-top:2em; padding-left:2em">
+    <a href="https://jetgal.pythonanywhere.com">Or Start Over</a></h2><p></p>
+
 </div>
 
 <div id="d3">
