--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -84,7 +84,7 @@ $(function() {
 <div style="padding-left:7em;padding-bottom:3em; font-family: Avant Garde, sans-serif;">
 <h2 style="color:blue;font-size:20px"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
 
-<h3><a  style="color:purple;"href="http://schorrmedia.com">Visit SchorrMedia.com</a>
+<h3><a  style="color:darkblue;"href="http://schorrmedia.com">Visit SchorrMedia.com</a>
 <span style="padding-left:7em"></span>
 <a href="https://github.com/nmschorr/linkcheck" style="color:#2FB595;">See this code on Github</a></h3>
 
