--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html
-      PUBLIC "-//W3C//DTD HTML 4.01//EN"
-      "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
 <html lang="en-US">
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
-<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Cache-Control" content="no-cache" >
+<meta http-equiv="Pragma" content="no-cache" >
+<meta http-equiv="Expires" content=0 >
 
 
 <title>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -30,7 +28,7 @@ Welcome to LinkCheck</h1>
 
 
 <form action="indexn" method ="POST" >
-<div style="padding-left:5em;padding-top:2em;" >
+<div style="padding-left:5em;padding-top:2em;">
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
@@ -67,9 +65,9 @@ Soon another page will appear with a link you'll need to click on.
 </body>
 
 <head>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Cache-Control" content="no-cache" >
+<meta http-equiv="Pragma" content="no-cache" >
+<meta http-equiv="Expires" content=0 >
 </head>
 
 </html>
