--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html
-      PUBLIC "-//W3C//DTD HTML 4.01//EN"
-      "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
 <html lang="en-US">
 <head>
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content=0>
 <title>LinkCheck Step Two</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
@@ -190,8 +188,8 @@ Don't put this window behind other windows or minimize. </div>
 
 </body>
 <head>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content=0>
 </head>
 </html>
