--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -7,9 +7,9 @@
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <link rel=stylesheet href="./static/style.css">
 
 <style type="text/css">
@@ -18,7 +18,6 @@
         margin-left:5em;
         line-height:1.5;
         font-size:12px;
-
         }
 
 h4 {
@@ -95,8 +94,8 @@ $(function() {
 
 </body>
 <head>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content=0>
 </head>
 </html>
