--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache" >
 <meta http-equiv="Pragma" content="no-cache" >
 <meta http-equiv="Expires" content=0 >
+<link rel=stylesheet href="./static/style.css">
 
 
 <title>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
