Another big cleanup of duplicates.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -167,7 +167,7 @@ You entered:  "{{ name }}"   </h3>
 <div id="continb">
 
 <form id="form" action="/indexnn" method ="POST" onsubmit="chg(); return true;">
-  <!--<input type="hidden" name="name" value="continue">-->
+  <input type="hidden" name="name" value="{{ name }}">
   <input type="submit" id="mb" value="   Continue   " class="continueButton" >
 </form>
 
