--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html lang="en-US">
+<html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
@@ -14,9 +14,9 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Yantramanav:800" rel="stylesheet">
-<title>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &ensp;&ensp;&emsp;&emsp;&emsp;&emsp;&ensp;Welcome to LinkCheck</title>
+<title>&emsp;LinkCheck</title>
 <style>
+
 #container {
   height: 170px;
     width: 100%;
@@ -57,8 +57,9 @@ padding-top:5px;
 </head>
 
 <body>
-<!--<div class="box2">Welcome to LinkCheck</div>-->
 
+
+<div style="border-width: 2em; border-style: solid; border-color:white;   z-index:9; ">
 
 <div id="container">
 
@@ -73,7 +74,7 @@ padding-top:5px;
 
 
 <div style="text-align: right; font-family: Roboto, sans-serif;  font-size: 11pt;
-    font-style:bold; color: #377ba8; padding-top:2em; ">
+    font-style:bold; color: #377ba8; padding-top:2em;padding-right:2em; ">
     This app is not meant for large websites.  <br>
     The larger the website - the longer it will take.<br> &emsp;<br>
 </div>
@@ -97,27 +98,25 @@ you want to check <br>
 </form>
 
 
-<div style="padding-left:12em; padding-top:2em; color:#377ba8;font-family: Montserrat, sans-serif;" >
+<div style="padding-left:4em; padding-top:2em; color:#377ba8;
+           font-family: Montserrat, sans-serif;font-size:14px;font-style:bold" >
 
     If you're here just to try LinkCheck, <br>you can copy and paste one of these links:<br></div>
-<div  style="padding-left:20em; color:#4271A2; ">
-<h4 style="font-family: Roboto, sans-serif;">
+<div  style="padding-left: 30em; color: #4271A2; padding-top:0em; z-index:93; font-family:
+    Roboto, sans-serif; font-size:12px; ">
     schorrmedia.com/m.html<br>
         astrology1234.com<br></h4>
 <br>
 </div>
 
 
-<div style="text-align:center; padding-top:1em; font-style:italic; font-size: 120%; color:purple;font-family: Montserrat, sans-serif;">
-
-
-
-</div>
-<div style="text-align:left;  font-style:italic; font-size: 92%; color:grey;">Only errors 400, 404, 408, 409 are reported.
+<div style="text-align:left;  font-style:italic; font-size: 92%; color:grey; padding-left:2em; ">
+    Only errors 400, 404, 408, 409 are reported.
 </div>
 <p> &nbsp; </p><p>   &nbsp;</p>
+</div>
+</div>
 </body>
-
 <head>
 <meta http-equiv="Cache-Control" content="no-cache" >
 <meta http-equiv="Pragma" content="no-cache" >
