--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 
 <html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
-<head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
+<head profile="https://www.w3.org/2005/10/profile">
+<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico" >
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache" >
@@ -86,7 +86,7 @@ padding-top:5px;
 Enter website or webpage<br>
 you want to check <br>
     for broken links <br>
-(no http prefix needed) http://
+(no http prefix needed) https://
 <input type="text" size="55" name="name"><br>
 </div><div style="padding-left:20em;  padding-top:10px;padding-bottom:6px;">
 
