--- a/templates/indexn.html
+++ b/templates/indexn.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 
-<html lang="en-US">
+<html lang="en-US" style=" background: #f1f1f1!important; padding: 1rem;">
 <head>
-<link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
+<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
