--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN"
-      "http://www.w3.org/TR/html4/strict.dtd">
+      "https://www.w3.org/TR/html4/strict.dtd">
 
-<html>
+<html style="background: #f1f1f1!important; padding: 1rem;">
 
 <head>
-<link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
+<link rel="icon" type="image/png" href="https://schorrmedia.com/favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
@@ -46,7 +46,42 @@ h3 {
     font-size:24px;
     }
 
+#container {
+  height: 100px;
+    width: 100%;
+  position: relative;
+}
 
+#image {
+    z-index=-1;
+  position: absolute;
+height: 92px;
+width: 100%;
+}
+
+#logo {
+    z-index=1;
+  position: absolute;
+height: 47px;
+
+width: 200px;
+padding-left:5px;
+padding-top:5px;
+}
+
+#text {
+  z-index: 100;
+  position: absolute;
+  color: white;
+  font-size: 1.9em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+    text-shadow: 1px 1px 1px grey;
+  padding-top: 2.7em;
+  padding-left: 9em;
+  text-align: center;
+
+     }
 
 
 
@@ -73,6 +108,16 @@ $(function() {
 </head>
 
 <body class="bodstyle">
+<div style="border-width: 2em; border-style: solid; border-color:white;   z-index:9; ">
+
+<div id="container">
+
+  <img id="image" src="https://schorrmedia.com/wp-content/uploads/2013/09/freeVectorBackgroundLandscape.jpg" />
+  <img id="logo" src="https://schorrmedia.com/wp-content/uploads/2016/07/cooltextLogoSmedia-300x71.gif" />
+  <p id="text">
+
+  </p>
+</div>
 
 <div class=cstyle>
 
@@ -82,7 +127,7 @@ $(function() {
 <div style="padding-left:7em;padding-bottom:3em; font-family: Avant Garde, sans-serif;">
 <h2 style="color:blue;font-size:20px"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
 
-<h3><a  style="color:darkblue;"href="http://schorrmedia.com">Visit SchorrMedia.com</a>
+<h3><a  style="color:darkblue;"href="https://schorrmedia.com">Visit SchorrMedia.com</a>
 <span style="padding-left:7em"></span>
 <a href="https://github.com/nmschorr/linkcheck" style="color:#2FB595;">See this code on Github</a></h3>
 
