--- a/templates/indexnn.html
+++ b/templates/indexnn.html
@@ -9,6 +9,7 @@
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel=stylesheet href="./static/style.css">
 
 <style type="text/css">
@@ -42,12 +43,12 @@ h4 {
 }
 
 h3 {
-    color:#2FB595;
+    color:#607d8b;
     font-size:24px;
     }
 
 #container {
-  height: 100px;
+  height: 104px;
     width: 100%;
   position: relative;
 }
@@ -110,30 +111,71 @@ $(function() {
 <body class="bodstyle">
 <div style="border-width: 2em; border-style: solid; border-color:white;   z-index:9; ">
 
-<div id="container">
+<div id="container" style="margin:4px; padding-bottom:2px; background-color:#bbc8ce;">
 
   <img id="image" src="https://schorrmedia.com/wp-content/uploads/2013/09/freeVectorBackgroundLandscape.jpg" />
   <img id="logo" src="https://schorrmedia.com/wp-content/uploads/2016/07/cooltextLogoSmedia-300x71.gif" />
-  <p id="text">
-
-  </p>
 </div>
 
 <div class=cstyle>
 
-<div id="content"></div>
-
-</div>
-<div style="padding-left:7em;padding-bottom:3em; font-family: Avant Garde, sans-serif;">
-<h2 style="color:blue;font-size:20px"><a href="https://jetgal.pythonanywhere.com">Start Over</a></h2><p></p>
-
-<h3><a  style="color:darkblue;"href="https://schorrmedia.com">Visit SchorrMedia.com</a>
-<span style="padding-left:7em"></span>
-<a href="https://github.com/nmschorr/linkcheck" style="color:#2FB595;">See this code on Github</a></h3>
-
+<div id="content">  </div>
 
 </div>
 
+
+<style>
+.w3-bar .w3-bar-item  {
+padding:8px 22px;
+color:white;
+}
+.menufontns {
+font-family:Montserrat, sans-serif;
+line-height:1.5;
+font-size:24px;
+text-shadow: 1px 1px 1px grey;
+}
+</style>
+
+
+<!-----------------------------------bar start----------------------------->
+<div class="w3-container" style="margin-top:4em;">
+<div class="w3-bar w3-blue-gray  ">
+  <!-----------------------------------first item ----------------------------->
+
+
+  <div class="w3-bar-item w3-button menufontns">
+    <a href="https://github.com/nmschorr/linkcheck" class="w3-bar-item" style="margin-left:1em;">
+      Github Source</a>
+  </div>
+  <!-----------------------------------2nd item ----------------------------->
+
+  <div class="w3-bar-item w3-button menufontns">
+
+  <a href="https://jetgal.pythonanywhere.com" class="w3-bar-item">
+    Start Over</a>
+
+  </div>
+
+  <!-----------------------------------3rd item ----------------------------->
+
+  <div class="w3-bar-item w3-button menufontns">
+
+       <a href="https://schorrmedia.com" class="w3-bar-item">
+         Visit SchorrMedia.com</a>
+
+  </div>
+
+    <!-----------------------------------3rd item ----------------------------->
+
+</div>
+</div>
+
+</div>
+
+  <div style="background-color:lightgrey;linear-gradient(cyan, gray) padding:2px;"> &nbsp; </div>
+
+  </div>
 
 
 </body>
